--- a/aeffect/templates/region.html
+++ b/aeffect/templates/region.html
@@ -32,7 +32,7 @@
       <!-- Title Area -->
       <li class="name">
         <h1>
-          <a href="#">
+          <a href="/">
             <span id="ihateyou">Alaska Carbon Exchange</span>
           </a>
         </h1>
