lots of templating/markdown.. got markdown importer working for index

--- a/aeffect/templates/index.html
+++ b/aeffect/templates/index.html
@@ -93,6 +93,7 @@
       <li class="unavailable" id="region-li"><a href="#" id="region">Please select a region by clicking on it on the map or from the upper menu</a></li>
   </ul>
 
+<div class="eleven centered columns">
   <div class="row">
     <div class="twelve columns">
     
@@ -141,8 +142,8 @@
 
     </div>
   </div>
-
   <!-- End Grid Section -->
+</div>
 
 
 
